--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ i   */
     })
         .then(function(response) {
                 // Handle the results here (response.result has the parsed body).
-                console.log("Response", response);
+                console.log(response.result.items[1].snippet.title);
               },
               function(err) { console.error("Execute error", err); });
   }
