--- a/index.html
+++ b/index.html
@@ -1,59 +1,24 @@
-﻿<script src="https://apis.google.com/js/api.js"></script>
-<script>
-  /**
-   * Sample JavaScript code for youtube.subscriptions.insert
-   * See instructions for running APIs Explorer code samples locally:
-   * https://developers.google.com/explorer-help/guides/code_samples#javascript
-i   */
+﻿<!DOCTYPE html>
+<html>
+	<head>
+   		<title>YouTube API V3</title>
+   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+	</head>
+	<body>
+ 		<script src="script.js"></script>
+		
+		<button onclick="authenticate().then(loadClient)">authorize and load</button>
+		<button onclick="execute()">execute</button>
+		<button onClick="search()">search</button>
 
-  function authenticate() {
-    return gapi.auth2.getAuthInstance()
-        .signIn({scope: "https://www.googleapis.com/auth/youtube.force-ssl"})
-        .then(
-	      function(response) {console.log(response);},
 
-              function(err) { console.error("Error signing in", err); });
-  }
-  function loadClient() {
-    gapi.client.setApiKey("AIzaSyBKkbJ3dtvhFXy_Ljm0Rch5pIzvk_FTz-A");
-    return gapi.client.load("https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest")
-        .then(function() { console.log("GAPI client loaded for API"); },
-              function(err) { console.error("Error loading GAPI client for API", err); });
-  }
-  // Make sure the client is loaded and sign-in is complete before calling this method.
-  function execute() {
-    return gapi.client.youtube.subscriptions.insert({
-      "resource": {
-        "id": "UC1aVIMKzUWHjpWyowcUi6A"
-      }
-    })
-        .then(function(response) {
-                // Handle the results here (response.result has the parsed body).
-                console.log("Response", response);
-              },
-              function(err) { console.error("Execute error", err); });
-  }
-  gapi.load("client:auth2", function() {
-    gapi.auth2.init({client_id: "778551256645-n49usuiedqdothjcf64d473nlhh0iqpo.apps.googleusercontent.com"});
-  });
-  function search() {
-    return gapi.client.youtube.search.list({
-      "part": [
-        "snippet"
-      ],
-      "maxResults": 25,
-      "q": "sanuka"
-    })
-        .then(function(response) {
-                // Handle the results here (response.result has the parsed body).
-                console.log(response.result.items[1].snippet.title);
-              },
-              function(err) { console.error("Execute error", err); });
-  }
+ 	</body>
+</html>
+           
 
-</script>
-<button onclick="authenticate().then(loadClient)">authorize and load</button>
-<button onclick="execute()">execute</button>
-<button onClick="search()">search</button>
+
+
+
+
 
 
