--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
    		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 	</head>
 	<body>
- 		<script src="script.js"></script>
+ 		<script src="https://apis.google.com/js/api.js"></script>
+
+		<script src="script.js"></script>
 		
 		<button onclick="authenticate().then(loadClient)">authorize and load</button>
 		<button onclick="execute()">execute</button>
