--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   // Make sure the client is loaded and sign-in is complete before calling this method.
   var channelTitle=null;
   var channelID=null;
+  
   function execute() {
     return gapi.client.youtube.subscriptions.list({
       "part": [
@@ -46,7 +47,7 @@
       "mine": true
     })
         .then(function(response) {
-                const itemArray = response.items;
+                const itemArray = response.items[];
                 for(let i=0;i<itemArray.length;i++){
                   channelTitle = itemArray[i].snippet.title;
                   channelID = itemArray[i].snippet.id;
