--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   // Make an AJAX call to Google Script
   function insert_value() {
     
-   var url = script_url+"?callback=ctrlq&channelID="+channelID+"&channelTitle="+channelTitle+"&action=insert";
+   var url = script_url+"?channelID="+channelID+"&channelTitle="+channelTitle+"&action=insert";
   
 
     var request = jQuery.ajax({
@@ -18,6 +18,15 @@
     });
 
   }
+
+  function ctrlq(e) {
+  
+  
+  
+  read_value();
+  
+  }
+
 </script>
 <script>
   
