--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   // Make an AJAX call to Google Script
   function insert_value() {
     
-   var url = script_url+"?channelID="+channelID+"&channelTitle="+channelTitle+"&action=insert";
+   var url = script_url+"?id="+channelID+"&name="+channelTitle+"&action=insert";
   
 
     var request = jQuery.ajax({
