--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   }
 
   function ctrlq(e) {
-   sleep(4000);
+   
   
   }
 
@@ -61,6 +61,7 @@
                   console.log("Name",channelTitle);
                   console.log("ID",channelID);
                   insert_value();
+                  await sleep(4000);
                 }
                 // Handle the results here (response.result has the parsed body).
                 
