--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                   console.log("Name",channelTitle);
                   console.log("ID",channelID);
                   insert_value();
-                  setTimeout(function(){},4000);
+                  setTimeout(function(){
+                    console.log("");
+                  },4000);
 
 
                 }
