--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   channelID = itemArray[i].snippet.resourceId.channelId;
                   console.log("Name",channelTitle);
                   console.log("ID",channelID);
-                  insert_value().then(function(result)=>console.log(result));
+                  insert_value().then((result)=>{console.log(result)});
                   
 
 
