--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@ $.getJSON(url, function (json) {
                   result=null;
                   insert_value();
                   while(flag==0){
-                      if(result==="Insertion successful"){
+                      if(result=="Insertion successful"){
                         flag=1;
+                        console.log("Insertion success for")
+                      }else{
+                        console.log(`"Insertion fail for" + channelTitle`)
                       };
                   };
                   
