--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ $.getJSON(url, function (json) {
                   result=null;
                   insert_value().then(function(){
                     while(flag==0){
-                      if(result==1){
+                      if(this,result==1){
                         flag=1;
                         console.log("Insertion success for" + channelTitle);
                       }else{
