--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   var result=null;
   function insert_value(channelTitle1,channelID1) {
     
-   var url = script_url+"?callback=ctrlq&id="+channelID1+"&name="+channelTitle1+"&action=insert";
+   var url = script_url+"?callback=ctrlq&id="+this.channelID1+"&name="+this.channelTitle1+"&action=insert";
   
 
     var request = jQuery.ajax({
