--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ $.getJSON(url, function (json) {
   var channelTitle=null;
   var channelID=null;
   var flag=0;
-  const itemArray;
+  const itemArray =null;
 
   function execute() {
     return gapi.client.youtube.subscriptions.list({
