--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <script src="https://apis.google.com/js/api.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script></script>
-<script>
-
-</script>
+<script src="channel.js"></script>
+<script src="CRUD.js"></script>
+<script src="YTAPI.js"></script>
 <button onclick="authenticate().then(loadClient)">authorize and load</button>
 <button onclick="execute()">execute</button>
 <button onclick="addChannels()">Add Channels</button>
